--- a/inaccessible-components/styles/index.scss
+++ b/inaccessible-components/styles/index.scss
@@ -1,15 +1,16 @@
-@import './variables/containers';
-@import './variables/grid';
+@import "./variables/containers";
+@import "./variables/grid";
 
-@import './mixins/breakpoints';
-@import './mixins/grid';
+@import "./mixins/breakpoints";
+@import "./mixins/grid";
 
-@import './base';
-@import './grid';
+@import "./base";
+@import "./grid";
 
-@import '../core-components/Header/';
-@import '../components/Accordion/';
-@import '../components/Accordion/Accessible';
-@import '../components/Breadcrumb';
-@import '../components/Breadcrumb/Accessible';
-
+@import "../core-components/Header/";
+@import "../components/Accordion/";
+@import "../components/Accordion/Accessible";
+@import "../components/Breadcrumb";
+@import "../components/Breadcrumb/Accessible";
+@import "../components/Modal";
+@import "../components/Modal/Accessible";
