--- a/inaccessible-components/components/Modal/Accessible/index.scss
+++ b/inaccessible-components/components/Modal/Accessible/index.scss
@@ -1,4 +1,8 @@
 .a-modal {
+  @media (max-width: 768px) {
+    height: 100%;
+  }
+
   &__wrapper {
     position: fixed;
     left: -100vw;
@@ -22,9 +26,18 @@
   &__content {
     position: relative;
     background: #fefefe;
-    width: 50rem;
     padding: 2rem;
     border: 1px solid black;
+    width: 50rem;
+
+    @media (max-width: 1224px) {
+      width: 40rem;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__title {
