--- a/inaccessible-components/styles/index.scss
+++ b/inaccessible-components/styles/index.scss
@@ -14,3 +14,5 @@
 @import "../components/Breadcrumb/Accessible";
 @import "../components/Modal";
 @import "../components/Modal/Accessible";
+@import "../components/Checkbox";
+@import "../components/Checkbox/Accessible";
