--- a/inaccessible-components/styles/index.scss
+++ b/inaccessible-components/styles/index.scss
@@ -16,3 +16,5 @@
 @import "../components/Modal/Accessible";
 @import "../components/Checkbox";
 @import "../components/Checkbox/Accessible";
+@import "../components/Tabs";
+@import "../components/Tabs/Accessible";
