--- a/inaccessible-components/components/Tabs/Accessible/index.scss
+++ b/inaccessible-components/components/Tabs/Accessible/index.scss
@@ -31,16 +31,10 @@
   }
 
   &__panel {
-    position: absolute;
-    overflow: hidden;
-    left: -9999px;
-    top: -9999px;
-    opacity: 0;
-    max-height: 100px;
+    display: none;
 
     &--active {
-      opacity: 1;
-      position: static;
+      display: block;
     }
 
     a {
