--- a/inaccessible-components/styles/index.scss
+++ b/inaccessible-components/styles/index.scss
@@ -20,3 +20,5 @@
 @import "../components/Tabs/Accessible";
 @import "../components/Radio";
 @import "../components/Radio/Accessible";
+@import "../components/Card";
+@import "../components/Card/Accessible";
